manifests/service-adcs-sim.yaml
apiVersion: v1
kind: Service
metadata:
  name: adcs-sim-service
  namespace: cert-manager
spec:
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    control-plane: adcs-sim
